added store service to api

--- a/app/application.scss
+++ b/app/application.scss
@@ -10,4 +10,19 @@
 
 // UI Components
 @import "core/ui/components/current-time/current-time";
+@import "core/ui/components/jmap/jmap";
 @import "core/ui/components/weather/weather";
+
+// UI Screens
+@import "core/ui/screen/tall/tall";
+@import "core/ui/screen/wide/wide";
+
+// UI States
+@import "core/ui/states/tall/categories/categories";
+@import "core/ui/states/tall/search/search";
+@import "core/ui/states/wide/dining/dining";
+@import "core/ui/states/wide/events/events";
+@import "core/ui/states/wide/map/map";
+@import "core/ui/states/wide/search/search";
+@import "core/ui/states/wide/services/services";
+@import "core/ui/states/wide/shopping/shopping";
