working on tall categories view

--- a/app/core/ui/components/current-time/_current-time.scss
+++ b/app/core/ui/components/current-time/_current-time.scss
@@ -1,8 +1,7 @@
 .current-time {
-	color: white;
-
-  &.tall {}
-
-  &.wide {}
-
+  &.tall {
+    @extend .flama.xxlarge.bold;
+    color: white;
+    text-align: right;
+  }
 }
