--- a/app/core/ui/components/weather/_weather.scss
+++ b/app/core/ui/components/weather/_weather.scss
@@ -1,37 +1,16 @@
-.weather {
-  color: white;
+.weather-summary,
+.weather-current-temp {
+	&.tall {
+	  color: white;
+	  text-align: right;
+	}
+}
 
-  &.tall {}
+.weather-summary {
+  @extend .flama.medium.bold;
+  text-transform: capitalize;
+}
 
-  &.wide {}
-
-
-
-
-
-
-  // Old Styles
-  // color: white;
-  // text-align: right;
-
-  // h1, h2, h3 {
-  //   @include font(flama);
-  //   margin: 0;
-  // }
-
-  // h1 {
-  //   font-size: 70px;
-  //   font-weight: 500;
-  //   margin-bottom: -10px;
-  // }
-
-  // h2 {
-  //   font-weight: 600;
-  //   text-transform: capitalize;
-  // }
-
-  // h3 {
-  //   font-size: 40px;
-  //   font-weight: 500;
-  // }
+.weather-current-temp {
+  @extend .flama.large.bold;
 }
