--- a/app/application.scss
+++ b/app/application.scss
@@ -8,21 +8,22 @@
 @import "core/ui/theme/famous";
 @import "core/ui/theme/helpers";
 
-// UI Components
-@import "core/ui/components/current-time/current-time";
-@import "core/ui/components/jmap/jmap";
-@import "core/ui/components/weather/weather";
+// UI Elements
+@import "core/ui/elements/current-time/current-time";
+@import "core/ui/elements/jmap/jmap";
+@import "core/ui/elements/weather/weather";
 
 // UI Screens
 @import "core/ui/screen/tall/tall";
 @import "core/ui/screen/wide/wide";
 
 // UI States
-@import "core/ui/states/tall/categories/categories";
-@import "core/ui/states/tall/search/search";
-@import "core/ui/states/wide/dining/dining";
-@import "core/ui/states/wide/events/events";
-@import "core/ui/states/wide/map/map";
-@import "core/ui/states/wide/search/search";
-@import "core/ui/states/wide/services/services";
-@import "core/ui/states/wide/shopping/shopping";
+@import "core/ui/screen/states/tall/categories/categories";
+@import "core/ui/screen/states/tall/search/search";
+@import "core/ui/screen/states/tall/stores/stores";
+@import "core/ui/screen/states/wide/dining/dining";
+@import "core/ui/screen/states/wide/events/events";
+@import "core/ui/screen/states/wide/map/map";
+@import "core/ui/screen/states/wide/search/search";
+@import "core/ui/screen/states/wide/services/services";
+@import "core/ui/screen/states/wide/shopping/shopping";
