initial states/routing for tallscreen

--- a/app/application.scss
+++ b/app/application.scss
@@ -10,7 +10,9 @@
 
 // UI Elements
 @import "core/ui/elements/current-time/current-time";
+@import "core/ui/elements/keyboard/keyboard";
 @import "core/ui/elements/jmap/jmap";
+@import "core/ui/elements/search/search";
 @import "core/ui/elements/weather/weather";
 
 // UI Screens
