--- a/app/core/ui/elements/floor-selector/_floor-selector.scss
+++ b/app/core/ui/elements/floor-selector/_floor-selector.scss
@@ -1,16 +1,40 @@
-.weather-summary,
-.weather-current-temp {
+.floor-selector-header {
 	&.tall {
-	  color: white;
-	  text-align: right;
+		@extend .condensed.xsmall.normal;
+		color: black;
+		font-style: italic;
 	}
 }
 
-.weather-summary {
-  @extend .flama.medium.bold;
-  text-transform: capitalize;
-}
+.floor-selector-floors {
+	z-index: 103;
+	
+	&.tall {
+		div {
+			@include border-radius(100px);
+			@include size(50px);
+			background: #bbb;
+			color: white;
 
-.weather-current-temp {
-  @extend .flama.large.bold;
+		  p, h1 {
+		    text-align: center;
+		    text-transform: uppercase;
+		  }
+
+		  p {
+		  	@extend .condensed.xxsmall.normal;
+		    padding-top: 7px;
+		  }
+
+		  h1 {
+		  	@extend .georgia.medium.normal;
+		    font-size: 30px;
+		    margin-top: -10px;
+		  }
+
+		  &.active {
+		    background: $brand;
+		  }
+		}
+	}
 }
