restored basic keyboard/search functionality

--- a/app/core/ui/elements/keyboard/_keyboard.scss
+++ b/app/core/ui/elements/keyboard/_keyboard.scss
@@ -2,13 +2,15 @@
 // ----------------------------------------------------------------------
 .keyboard {
 
-	g.active {
-	  .key-background {
-	    fill: #c7242e;
-	  }
-	}
-
 	&.tall {
 		z-index: 100;
+
+		g {
+			&.active {
+			  .key-background {
+			    fill: #c7242e;
+			  }
+			}
+		}
 	}
 }
