--- a/app/application.scss
+++ b/app/application.scss
@@ -9,24 +9,24 @@
 @import "core/ui/theme/helpers";
 
 // UI Elements
-@import "core/ui/elements/current-time/current-time";
-@import "core/ui/elements/floor-selector/floor-selector";
-@import "core/ui/elements/jmap/jmap";
-@import "core/ui/elements/keyboard/keyboard";
-@import "core/ui/elements/search/search";
-@import "core/ui/elements/weather/weather";
+// @import "core/ui/elements/current-time/current-time";
+// @import "core/ui/elements/floor-selector/floor-selector";
+// @import "core/ui/elements/jmap/jmap";
+// @import "core/ui/elements/keyboard/keyboard";
+// @import "core/ui/elements/search/search";
+// @import "core/ui/elements/weather/weather";
 
 // UI Screens
-@import "core/ui/screen/tall/tall";
-@import "core/ui/screen/wide/wide";
+// @import "core/ui/screen/tall/tall";
+// @import "core/ui/screen/wide/wide";
 
 // UI States
-@import "core/ui/screen/tall/states/categories/categories";
-@import "core/ui/screen/tall/states/search/search";
-@import "core/ui/screen/tall/states/stores/stores";
-@import "core/ui/screen/wide/states/dining/dining";
-@import "core/ui/screen/wide/states/events/events";
-@import "core/ui/screen/wide/states/map/map";
-@import "core/ui/screen/wide/states/search/search";
-@import "core/ui/screen/wide/states/services/services";
-@import "core/ui/screen/wide/states/shopping/shopping";
+// @import "core/ui/screen/tall/states/categories/categories";
+// @import "core/ui/screen/tall/states/search/search";
+// @import "core/ui/screen/tall/states/stores/stores";
+// @import "core/ui/screen/wide/states/dining/dining";
+// @import "core/ui/screen/wide/states/events/events";
+// @import "core/ui/screen/wide/states/map/map";
+// @import "core/ui/screen/wide/states/search/search";
+// @import "core/ui/screen/wide/states/services/services";
+// @import "core/ui/screen/wide/states/shopping/shopping";
